// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MergeRequestList grid matches snapshot 1`] = `
<div>
  <div
    class="gap-5 grid grid-cols-4"
  >
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
  </div>
</div>
`;

exports[`MergeRequestList matches snapshot 1`] = `
<div>
  <div
    class="gap-5 flex flex-col"
  >
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
  </div>
</div>
`;
